# plait

./: Cargo.toml  Justfile  README.md
.github/workflows/: build.yml
plait/: Cargo.toml  README.md
plait-macros/: Cargo.toml  README.md  README.tpl
plait-macros/src/: ast.rs  buffer.rs  codegen.rs  lib.rs  parse.rs  utils.rs
plait-macros/src/ast/: attribute.rs  component_call.rs  component_definition.rs  element.rs  escape.rs  expression.rs  for_loop.rs  if_condition.rs  let_binding.rs  match_expression.rs  node.rs  template.rs
plait-macros/src/ast/attribute/: attribute_name.rs  attribute_value.rs
plait-macros/src/ast/expression/: parenthesized_expression.rs
plait-macros/src/codegen/: attrs.rs  component.rs  desugar.rs  html.rs  render.rs  statements.rs
plait-macros/src/parse/: attribute.rs  component_call.rs  component_definition.rs  element.rs  for_loop.rs  if_condition.rs  let_binding.rs  match_expression.rs  node.rs  template.rs
plait-tests/: Cargo.toml
plait-tests/src/: lib.rs
plait/benches/: big_table.rs  static_html.rs
plait/src/: attributes.rs  classes.rs  component.rs  display.rs  escape.rs  formatter.rs  fragment.rs  html.rs  lazy.rs  lib.rs  maybe_attr.rs  pre_escaped.rs  render.rs  render_fn.rs  to_html.rs  url.rs  utils.rs
plait/src/escape/: html.rs  url.rs
plait/src/render/: escaped.rs  raw.rs
plait/tests/: classes_test.rs  classes_tests.rs  component_macro_desugar_test.rs  component_macro_desugar_tests.rs  component_macro_test.rs  component_macro_tests.rs  html_macro_test.rs  html_macro_tests.rs
spool/: Cargo.toml
spool-macros/: Cargo.toml
spool-macros/src/: ast.rs  codegen.rs  lib.rs
spool-macros/src/ast/: attribute.rs  element.rs  escape.rs  expression.rs  match_expression.rs  node.rs
spool-macros/src/ast/attribute/: attribute_name.rs  attribute_value.rs
spool-macros/src/ast/expression/: bracketed_expression.rs
spool-macros/src/codegen/: attrs.rs  html.rs  render.rs
spool-tests/: Cargo.toml
spool-tests/src/: lib.rs
spool/src/: attributes.rs  error.rs  escape.rs  formatter.rs  html.rs  lib.rs  pre_escaped.rs  render.rs
spool/src/escape/: html.rs
