[package]
name = "plait"
version = "0.8.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A modern HTML templating library for Rust that embraces composition."
homepage = "https://github.com/devashishdxt/plait"
repository = "https://github.com/devashishdxt/plait"
categories = ["template-engine", "web-programming"]
keywords = ["html", "template", "markup"]
edition = "2024"

[features]
default = []
actix-web = ["dep:actix-web"]
axum = ["dep:axum"]
rocket = ["dep:rocket"]

[dependencies]
actix-web = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
itoa.workspace = true
plait-macros.workspace = true
rocket = { workspace = true, optional = true }
ryu.workspace = true

[package.metadata.docs.rs]
all-features = true
