[package]
name = "plait"
version = "0.8.1"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A modern HTML templating library for Rust that embraces composition."
homepage = "https://github.com/devashishdxt/plait"
repository = "https://github.com/devashishdxt/plait"
categories = ["template-engine", "web-programming"]
keywords = ["html", "template", "markup"]
edition = "2024"

[features]
default = ["itoa", "ryu"]
actix-web = ["dep:actix-web"]
axum = ["dep:axum"]
itoa = ["dep:itoa"]
rocket = ["dep:rocket"]
ryu = ["dep:ryu"]

[dependencies]
actix-web = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
itoa = { workspace = true, optional = true }
plait-macros.workspace = true
rocket = { workspace = true, optional = true }
ryu = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
