[package]
name = "spool"
version = "0.1.0"
description = "A modern HTML templating library for Rust that embraces composition."
edition = "2024"

[dependencies]
hescape.workspace = true
indexmap.workspace = true
itoa.workspace = true
ryu.workspace = true
spool-macros.workspace = true
thiserror.workspace = true
urlencoding.workspace = true
